--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -10,6 +10,7 @@
         color: $text-color
         margin-bottom: 70px
     &-slider
+        width: 100%
         &__item
             position: relative
             display: flex
